getmediabyid getallmedias addmedia
