# storage/api-docs/api-docs.json
@@ -28,7 +28,7 @@
                 ],
                 "summary": "Add a new article to the store",
                 "description": "",
-                "operationId": "Section",
+                "operationId": "Article",
                 "consumes": [
                     "application/json",
                     "application/xml"
@@ -239,6 +239,145 @@
 
 
 
+        "/magazine-tunisie/public/media": {
+            "post": {
+                "tags": [
+                    "media"
+                ],
+                "summary": "Add a new media to the store",
+                "description": "Add a new media to the store",
+                "operationId": "addPet",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "media",
+                        "description": "media object that needs to be added to the store",
+                        "required": true,
+                        "schema": {
+
+                            "$ref": "#/definitions/Media"
+
+                        }
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:pets",
+                            "read:pets"
+                        ]
+                    }
+                ]
+            },
+            "get": {
+                "tags": [
+                    "media"
+                ],
+                "summary": "list medias",
+                "responses": {
+
+                    "200": {
+                        "description": "A list of media"
+
+
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "media"
+                ],
+                "summary": "delete media by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "ids",
+                        "in": "body",
+                        "description": "IDs of media that needs to be fetched",
+                        "required": true,
+                        "type": "array",
+                        "items": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+
+
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response"
+
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+
+
+
+
+
+
+
+
+
+
+        "/magazine-tunisie/public/media/{id}": {
+            "get": {
+                "tags": [
+                    "media"
+                ],
+                "summary": "Find media by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of media that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+
+                            "$ref": "#/definitions/media"
+
+                        }
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
 
 
 
@@ -469,6 +608,36 @@
 
             }
         },
+
+
+
+
+        "Media": {
+            "type": "object",
+            "required": [
+                "id",
+                "url",
+                "article_id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "article_id": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+
+            }
+        },
+
+
+
+
         "Error": {
             "type": "object",
             "required": [
